--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 
     <div>
         <h1>Video</h1>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/S8FbvCJHk2g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/oiYCNZy2DjQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <p>
             Click <u><b><a href="SOP.docx">here</a></b></u> to download Standard Operating Procedure document!
