--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
        <iframe width="560" height="315" src="https://www.youtube.com/embed/oiYCNZy2DjQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <p>
-            Click <u><b><a href="SOP.docx">here</a></b></u> to download Standard Operating Procedure document!
+            Click <u><b><a href="SOP.docx">here</a></b></u> to download Standard Operating Procedures document!
         </p>
 
     </div>
