--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <html>
 
 <head>
-    <title>Video</title>
+    <title>Carolyn's Video Demo</title>
 
 
     <link rel="stylesheet" href="CSS/stylesheet.css">
